# IMU_Parser_Assessment

./: CMakeLists.txt  README.md  run_tests.sh
IMU_Driver/: Driver.py  DummyReceiver.py  GyroViewer.py  LoopTester.py  Receiver.py  requirements.txt
IMU_Parser/src/: compatibility.h  imu_parser.cpp  imu_parser.h  imu_reader.cpp  imu_reader.h  imu_reader_copy.cpp  parse_functions.cpp  parse_functions.h
IMU_Parser/test/: compatibility.h  fake_data.cpp  fake_data.h  fake_data_extern.cpp  mock_imu.cpp  parser_test.cpp  test_imu.cpp
